[tool.poetry]
name = "picrew-bot"
version = "0.1.0"
description = ""
authors = ["'Jeong Arm' <'kjwonmail@gmail.com'>"]
readme = "README.md"
packages = [
    { include = "picrew_bot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
mastodon-py = {git = "https://github.com/halcy/Mastodon.py"}
apscheduler = "^3.10.4"
lxml = "^5.3.0"
pillow = "^10.4.0"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-import-order = "^0.18.2"
flake8-builtins = "^2.5.0"
mypy = "^1.11.2"

[tool.poetry.scripts]
picrew-bot = "picrew_bot.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"
check_untyped_defs = true
