[project]
name = "picrew-bot"
version = "0.1.0"
description = ""
authors = [{ name = "'Jeong Arm'", email = "'kjwonmail@gmail.com'" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "mastodon-py>=2.0.1,<3",
    "lxml>=5.3.0,<6",
    "pillow>=10.4.0,<11",
    "httpx>=0.27.2,<0.28",
    "humanize>=4.12.3",
]

[project.scripts]
picrew-bot = "picrew_bot.bot:main"

[dependency-groups]
dev = [
    "flake8>=7.1.1,<8",
    "flake8-import-order>=0.18.2,<0.19",
    "flake8-builtins>=2.5.0,<3",
    "mypy>=1.11.2,<2",
]

[tool.hatch.build.targets.sdist]
include = ["src/picrew_bot"]

[tool.hatch.build.targets.wheel]
include = ["src/picrew_bot"]

[tool.hatch.build.targets.wheel.sources]
"src/picrew_bot" = "picrew_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
disable_error_code = "import-untyped"
check_untyped_defs = true
